--- a/index.html
+++ b/index.html
@@ -104,21 +104,23 @@
                 ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come
                 loro:</p>
 
-            <iframe id="videoUTube" width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-            <section id="sezioneUno">
-                <h2 id="novita">Novità</h2>
-                <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
-
-                <form method="POST" action="elabora_form.php">
-                    <fieldset>
-                        <input type="email" name="user_email" id="user_email" placeholder="inserisci l'email" required>
-                        <button id="bottone" type="submit">Iscriviti!</button>
-                    </fieldset>
-                </form>
+          <div id="allineamento">
+                <iframe id="videoUTube" width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+    
+                <section id="sezioneUno">
+                    <h2 id="novita">Novità</h2>
+                    <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
+    
+                    <form method="POST" action="elabora_form.php">
+                        <fieldset>
+                            <input type="email" name="user_email" id="user_email" placeholder="inserisci l'email" required>
+                            <button id="bottone" type="submit">Iscriviti!</button>
+                        </fieldset>
+                    </form>
+          </div>
             </section>
 
         </article>
